Tests/Modules/Error/Multilingual/.build/catchjapanese.pr
{
  "name": "CatchJapanese",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtJapanese% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtJapanese%",
              "type": "variable"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            },
            {
              "name": "Type",
              "value": "bool",
              "type": "string"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": "variable.set(Name=%caughtJapanese%, Value=true, Type=bool)",
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/Multilingual/CatchJapanese.goal",
  "prPath": "/Modules/Error/Multilingual/.build/catchjapanese.pr",
  "hash": "60c802606c976f152d5f57bca81d0e5a510c3c76a762e5b2835c240434bcdc3c",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}